# autocraft

autocraft/: README.md  pyproject.toml
autocraft/src/autocraft/: crew.py  main.py
autocraft/src/autocraft.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
autocraft/src/autocraft/config/: agents.yaml  tasks.yaml
autocraft/src/autocraft/templates/: CONSUMER_TEST_BODY.j2  FAKER_BODY_TMPL.j2  H2_TEST_BODY_INMEM.j2  H2_TEST_BODY_TESTCONTAINERS.j2  JDBC_EXEC_BODY_TMPL.j2  KAFKA_MOCK_BODY.j2  MONGO_EMBED_BODY.j2  PRODUCER_TEST_BODY.j2  TESTCONTAINERS_SQLSERVER_BODY.j2
autocraft/src/autocraft/tools/: custom_tool.py
